assignment/antlr4/target/generated-sources/antlr4/bkool/parser/BKOOLParser.java
// Generated from BKOOL.g4 by ANTLR 4.5.1

	package bkool.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BKOOLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENTS=1, CHARACTER=2, BOOL=3, BREAK=4, CLASS=5, CONTINUE=6, DO=7, ELSE=8, 
		EXTENDS=9, FLOAT=10, IF=11, INTEGER=12, NEW=13, STRING=14, THEN=15, WHILE=16, 
		RETURN=17, TRUE=18, FALSE=19, VOID=20, NULL=21, SELF=22, FINAL=23, STATIC=24, 
		KEYWORDS=25, ID=26, ASS_OP=27, ADD_OP=28, SUB_OP=29, MUL_OP=30, FLOAT_DIV_OP=31, 
		INT_DIV_OP=32, MOD_OP=33, NOT_EQUAL_OP=34, EQUAL_OP=35, EQUAL_OP_2=36, 
		LESS_OP=37, GREATER_OP=38, LESS_EQUAL_OP=39, GREATER_EQUAL_OP=40, OR_OP=41, 
		AND_OP=42, NOT_OP=43, CONCAT_OP=44, OPERATOR=45, LEFT_SQUARE_BRACKET=46, 
		RIGHT_SQUARE_BRACKET=47, LEFT_BRACKET=48, RIGHT_BRACKET=49, COMMA=50, 
		DOT=51, COLON=52, SEMI_COLON=53, LEFT_PARENTHESIS=54, RIGHT_PARENTHESIS=55, 
		SEPARATOR=56, FLOAT_LIT=57, INTEGER_LIT=58, ERROR_UNCLOSE_STRING=59, ERROR_ESCAPE_STRING=60, 
		STRING_LIT=61, WS=62, ERROR_TOKEN=63;
	public static final int
		RULE_program = 0, RULE_classDecl = 1, RULE_listmember = 2, RULE_attribute = 3, 
		RULE_declare1 = 4, RULE_declare = 5, RULE_type = 6, RULE_type1 = 7, RULE_constDeclare = 8, 
		RULE_varDeclare = 9, RULE_listID = 10, RULE_methodDecl = 11, RULE_listparameter = 12, 
		RULE_listpara_member = 13, RULE_expression = 14, RULE_expression2 = 15, 
		RULE_expression1 = 16, RULE_fact = 17, RULE_list_expression = 18, RULE_stmt = 19, 
		RULE_block_stmt = 20, RULE_assign_stmt = 21, RULE_if_stmt = 22, RULE_while_stmt = 23, 
		RULE_break_stmt = 24, RULE_continue_stmt = 25, RULE_return_stmt = 26, 
		RULE_invocation_stmt = 27;
	public static final String[] ruleNames = {
		"program", "classDecl", "listmember", "attribute", "declare1", "declare", 
		"type", "type1", "constDeclare", "varDeclare", "listID", "methodDecl", 
		"listparameter", "listpara_member", "expression", "expression2", "expression1", 
		"fact", "list_expression", "stmt", "block_stmt", "assign_stmt", "if_stmt", 
		"while_stmt", "break_stmt", "continue_stmt", "return_stmt", "invocation_stmt"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, "'bool'", "'break'", "'class'", "'continue'", "'do'", 
		"'else'", "'extends'", "'float'", "'if'", "'integer'", "'new'", "'string'", 
		"'then'", "'while'", "'return'", "'true'", "'false'", "'void'", "'null'", 
		"'self'", "'final'", "'static'", null, null, "':='", "'+'", "'-'", "'*'", 
		"'/'", "'\\'", "'%'", "'<>'", "'=='", "'='", "'<'", "'>'", "'<='", "'>='", 
		"'||'", "'&&'", "'!'", "'^'", null, "'['", "']'", "'('", "')'", "','", 
		"'.'", "':'", "';'", "'{'", "'}'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "COMMENTS", "CHARACTER", "BOOL", "BREAK", "CLASS", "CONTINUE", "DO", 
		"ELSE", "EXTENDS", "FLOAT", "IF", "INTEGER", "NEW", "STRING", "THEN", 
		"WHILE", "RETURN", "TRUE", "FALSE", "VOID", "NULL", "SELF", "FINAL", "STATIC", 
		"KEYWORDS", "ID", "ASS_OP", "ADD_OP", "SUB_OP", "MUL_OP", "FLOAT_DIV_OP", 
		"INT_DIV_OP", "MOD_OP", "NOT_EQUAL_OP", "EQUAL_OP", "EQUAL_OP_2", "LESS_OP", 
		"GREATER_OP", "LESS_EQUAL_OP", "GREATER_EQUAL_OP", "OR_OP", "AND_OP", 
		"NOT_OP", "CONCAT_OP", "OPERATOR", "LEFT_SQUARE_BRACKET", "RIGHT_SQUARE_BRACKET", 
		"LEFT_BRACKET", "RIGHT_BRACKET", "COMMA", "DOT", "COLON", "SEMI_COLON", 
		"LEFT_PARENTHESIS", "RIGHT_PARENTHESIS", "SEPARATOR", "FLOAT_LIT", "INTEGER_LIT", 
		"ERROR_UNCLOSE_STRING", "ERROR_ESCAPE_STRING", "STRING_LIT", "WS", "ERROR_TOKEN"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BKOOL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BKOOLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<ClassDeclContext> classDecl() {
			return getRuleContexts(ClassDeclContext.class);
		}
		public ClassDeclContext classDecl(int i) {
			return getRuleContext(ClassDeclContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BKOOLListener ) ((BKOOLListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BKOOLListener ) ((BKOOLListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BKOOLVisitor ) return ((BKOOLVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(56);
				classDecl();
				}
				}
				setState(59); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CLASS );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(BKOOLParser.CLASS, 0); }
		public List<TerminalNode> ID() { return getTokens(BKOOLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(BKOOLParser.ID, i);
		}
		public TerminalNode LEFT_PARENTHESIS() { return getToken(BKOOLParser.LEFT_PARENTHESIS, 0); }
		public TerminalNode RIGHT_PARENTHESIS() { return getToken(BKOOLParser.RIGHT_PARENTHESIS, 0); }
		public TerminalNode EXTENDS() { return getToken(BKOOLParser.EXTENDS, 0); }
		public List<ListmemberContext> listmember() {
			return getRuleContexts(ListmemberContext.class);
		}
		public ListmemberContext listmember(int i) {
			return getRuleContext(ListmemberContext.class,i);
		}
		public ClassDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BKOOLListener ) ((BKOOLListener)listener).enterClassDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BKOOLListener ) ((BKOOLListener)listener).exitClassDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BKOOLVisitor ) return ((BKOOLVisitor<? extends T>)visitor).visitClassDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDeclContext classDecl() throws RecognitionException {
		ClassDeclContext _localctx = new ClassDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(CLASS);
			setState(62);
			match(ID);
			setState(65);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(63);
				match(EXTENDS);
				setState(64);
				match(ID);
				}
			}

			setState(67);
			match(LEFT_PARENTHESIS);
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL) | (1L << FLOAT) | (1L << INTEGER) | (1L << STRING) | (1L << VOID) | (1L << FINAL) | (1L << STATIC) | (1L << ID))) != 0)) {
				{
				{
				setState(68);
				listmember();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(74);
			match(RIGHT_PARENTHESIS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListmemberContext extends ParserRuleContext {
		public AttributeContext attribute() {
			return getRuleContext(AttributeContext.class,0);
		}
		public MethodDeclContext methodDecl() {
			return getRuleContext(MethodDeclContext.class,0);
		}
		public ListmemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listmember; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BKOOLListener ) ((BKOOLListener)listener).enterListmember(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BKOOLListener ) ((BKOOLListener)listener).exitListmember(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BKOOLVisitor ) return ((BKOOLVisitor<? extends T>)visitor).visitListmember(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListmemberContext listmember() throws RecognitionException {
		ListmemberContext _localctx = new ListmemberContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_listmember);
		try {
			setState(78);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				attribute();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				methodDecl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeContext extends ParserRuleContext {
		public ListIDContext listID() {
			return getRuleContext(ListIDContext.class,0);
		}
		public TerminalNode COLON() { return getToken(BKOOLParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode SEMI_COLON() { return getToken(BKOOLParser.SEMI_COLON, 0); }
		public TerminalNode STATIC() { return getToken(BKOOLParser.STATIC, 0); }
		public TerminalNode FINAL() { return getToken(BKOOLParser.FINAL, 0); }
		public TerminalNode ID() { return getToken(BKOOLParser.ID, 0); }
		public TerminalNode EQUAL_OP_2() { return getToken(BKOOLParser.EQUAL_OP_2, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BKOOLListener ) ((BKOOLListener)listener).enterAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BKOOLListener ) ((BKOOLListener)listener).exitAttribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BKOOLVisitor ) return ((BKOOLVisitor<? extends T>)visitor).visitAttribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeContext attribute() throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_attribute);
		int _la;
		try {
			setState(98);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				_la = _input.LA(1);
				if (_la==STATIC) {
					{
					setState(80);
					match(STATIC);
					}
				}

				setState(83);
				listID();
				setState(84);
				match(COLON);
				setState(85);
				type();
				setState(86);
				match(SEMI_COLON);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				_la = _input.LA(1);
				if (_la==STATIC) {
					{
					setState(88);
					match(STATIC);
					}
				}

				setState(91);
				match(FINAL);
				setState(92);
				type();
				setState(93);
				match(ID);
				setState(94);
				match(EQUAL_OP_2);
				setState(95);
				expression();
				setState(96);
				match(SEMI_COLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declare1Context extends ParserRuleContext {
		public ConstDeclareContext constDeclare() {
			return getRuleContext(ConstDeclareContext.class,0);
		}
		public VarDeclareContext varDeclare() {
			return getRuleContext(VarDeclareContext.class,0);
		}
		public Declare1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BKOOLListener ) ((BKOOLListener)listener).enterDeclare1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BKOOLListener ) ((BKOOLListener)listener).exitDeclare1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BKOOLVisitor ) return ((BKOOLVisitor<? extends T>)visitor).visitDeclare1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declare1Context declare1() throws RecognitionException {
		Declare1Context _localctx = new Declare1Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_declare1);
		try {
			setState(102);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				constDeclare();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				varDeclare();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
